# hairsim

./: .gitignore  CMakeLists.txt  check-in.aux  check-in.tex  imgui.ini
assignment_code/assignment3/: ClothNode.hpp  CurveNode.cpp  CurveNode.hpp  ForwardEulerIntegrator.hpp  HairNode.hpp  HairSystem.hpp  IntegratorFactory.hpp  ParticleState.hpp  PendulumNode.hpp  PendulumSystem.hpp  RK4Integrator.hpp  SimpleNode.hpp  SimpleSystem.hpp  SimulationApp.cpp  TrapezoidalIntegrator.hpp  Util.hpp  main.cpp
gloo/: Application.cpp  MeshLoader.cpp  Renderer.cpp  Renderer.hpp  SceneNode.hpp  VertexObject.hpp
gloo/cameras/: ArcBallCameraNode.cpp  ArcBallCameraNode.hpp
gloo/components/: ComponentType.hpp  RenderingComponent.cpp
gloo/gl_wrapper/: Framebuffer.cpp  Framebuffer.hpp
gloo/shaders/: InlineShaders.hpp  PhongShader.cpp  ShaderProgram.cpp  ShaderProgram.hpp
